k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-challenge
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{}'
