k8s/api-messaging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-messaging-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-challenge-api-messaging
  template:
    metadata:
      labels:
        app: tech-challenge-api-messaging
    spec:
      containers:
        - name: apiqueue
          image: ciroa/tech-challenge-group43:Techchallenge01.ApiMessaging-latest
          ports:
            - containerPort: 8080
