k8s/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: ciroa/tech-challenge-group43:TechChallenge01.ApiGateway-latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"   # Ajustado para 200m de CPU
            limits:
              memory: "512Mi"
              cpu: "1"      # Limite de 1 CPU
