k8s/infra-consumer-deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge-infra-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tech-challenge-infra-consumer
  template:
    metadata:
      labels:
        app: tech-challenge-infra-consumer
    spec:
      containers:
        - name: infra-consumer-container
          image: ciroa/tech-challenge-group43:TechChallenge01.Infra.Consumer-latest
          ports:
            - containerPort: 8080
