k8s/api-messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-api-messaging-service
spec:
  selector:
    app: tech-challenge-api-messaging
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30850
  type: NodePort
