k8s/api-token-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-token-config-service
spec:
  selector:
    app: api-token-config
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
