k8s/infra-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-infra-consumer-service
spec:
  selector:
    app: tech-challenge-infra-consumer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30900
  type: NodePort
