k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: rabbitmq
    - protocol: TCP
      port: 15672
      targetPort: 15672
      name: rabbitmq-mng
    - protocol: TCP
      port: 15692
      targetPort: 15692
      name: rabbitmq-metrics
  type: NodePort
