k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP   

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
  type: ClusterIP   

---
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-api
spec:
  selector:
    app: tech-challenge-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000  # Definindo uma porta no intervalo 30000-32767
  type: NodePort      # Alterado para NodePort, que expõe o serviço externamente
