k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.tech-challenge.local
    http:
      paths:
      - path: /infra-consumer
        pathType: Prefix
        backend:
          service:
            name: tech-challenge-infra-consumer-service
            port:
              number: 8080
      - path: /api-token
        pathType: Prefix
        backend:
          service:
            name: tech-challenge-api-token-service
            port:
              number: 8080
      - path: /messaging
        pathType: Prefix
        backend:
          service:
            name: tech-challenge-api-messaging-service
            port:
              number: 8080

  - host: monitoring.tech-challenge.local
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000

  - host: messaging.tech-challenge.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
